src/snapshots/alma__parser__tests__test_module_parser__branch with params.snap
---
source: src/parser.rs
assertion_line: 3342
expression: "parse(\"\nmodule Test\n\ntype Fruit = Banana a\n\")"
---
Input:


module Test

type Fruit = Banana a


Result:

module Test
    exports:

    imports:
        Alma 1:7
            Float 1:7 1:7
            String 1:7 1:7
            Bool 1:7 (True 1:7, False 1:7) 1:7
    type_definitions:
        Fruit 19:24
            Banana 27:33 27:35
                a 34:35
    definitions:




