src/snapshots/alma__parser__tests__test_module_parser__empty_module.snap
---
source: src/parser.rs
assertion_line: 2275
expression: "parse(\"module Test\")"

---
Input:

module Test

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [],
    },
    [],
)
