src/snapshots/alma__parser__tests__test_module_parser__external_types.snap
---
source: src/parser.rs
assertion_line: 3439
expression: "parse(\"\\\nmodule Test exposing (Option)\n\nexternal type Option a = Some a | None\n\")"
---
Input:

module Test exposing (Option)

external type Option a = Some a | None


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    2,
                ),
                typ: Type {
                    name: CapitalizedIdentifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                    constructors: [],
                },
            },
        ],
        imports: [
            Import {
                span: Index(
                    3,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 6,
                            },
                            span: Index(
                                3,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 6,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            3,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 7,
                                },
                                span: Index(
                                    3,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            3,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 8,
                                },
                                span: Index(
                                    3,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            3,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 9,
                                },
                                span: Index(
                                    3,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 10,
                                    },
                                    span: Index(
                                        3,
                                    ),
                                },
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                    span: Index(
                                        3,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [],
        type_definitions: [
            TypeDefinition {
                span: Index(
                    11,
                ),
                name: CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 2,
                    },
                    span: Index(
                        4,
                    ),
                },
                vars: [
                    Identifier {
                        name: SymbolU32 {
                            value: 3,
                        },
                        span: Index(
                            5,
                        ),
                    },
                ],
                typ: External {
                    constructors: [
                        Constructor {
                            span: Index(
                                8,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 4,
                                },
                                span: Index(
                                    6,
                                ),
                            },
                            params: [
                                Var(
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            7,
                                        ),
                                    },
                                ),
                            ],
                        },
                        Constructor {
                            span: Index(
                                10,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 5,
                                },
                                span: Index(
                                    9,
                                ),
                            },
                            params: [],
                        },
                    ],
                },
            },
        ],
        expressions: {},
        expression_types: {},
    },
    [],
)

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            8,
        ),
        end: Index(
            8,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            14,
        ),
    },
}
