src/snapshots/alma__parser__tests__test_module_parser__import-2.snap
---
source: src/parser.rs
assertion_line: 2596
expression: "parse(\"\\\nmodule Test\n\nimport Banana as B\")"
---
Input:

module Test

import Banana as B

Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Node {
                start: Index(
                    2,
                ),
                end: Index(
                    5,
                ),
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: Index(
                                    3,
                                ),
                                end: Index(
                                    3,
                                ),
                                value: CapitalizedIdentifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ],
                        full_name: SymbolU32 {
                            value: 2,
                        },
                    },
                    alias: Some(
                        Node {
                            start: Index(
                                5,
                            ),
                            end: Index(
                                5,
                            ),
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ),
                    exposing: [],
                },
            },
        ],
        definitions: [],
        type_definitions: [],
    },
    [],
)
