src/snapshots/alma__parser__tests__test_module_parser__import.snap
---
source: src/parser.rs
assertion_line: 2663
expression: "parse(\"\\\nmodule Test\n\nimport Banana\")"
---
Input:

module Test

import Banana

Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Import {
                span: Index(
                    2,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 2,
                    },
                },
                alias: None,
                exposing: [],
            },
        ],
        definitions: [],
        type_definitions: [],
    },
    [],
)

{}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            3,
        ),
        end: Index(
            3,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            3,
        ),
    },
}
