src/snapshots/alma__parser__tests__test_module_parser__multiple branch.snap
---
source: src/parser.rs
assertion_line: 2720
expression: "parse(\"\nmodule Test\n\ntype Fruit = Banana | Apple\n\")"
---
Input:


module Test

type Fruit = Banana | Apple


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Idx(
                        1,
                    ),
                    end: Idx(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: Idx(
                    2,
                ),
                end: Idx(
                    7,
                ),
                value: TypeDefinition_ {
                    name: Node {
                        start: Idx(
                            3,
                        ),
                        end: Idx(
                            3,
                        ),
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [],
                    typ: Union(
                        [
                            Node {
                                start: Idx(
                                    5,
                                ),
                                end: Idx(
                                    5,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Idx(
                                            5,
                                        ),
                                        end: Idx(
                                            5,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [],
                                },
                            },
                            Node {
                                start: Idx(
                                    7,
                                ),
                                end: Idx(
                                    7,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Idx(
                                            7,
                                        ),
                                        end: Idx(
                                            7,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                    params: [],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
