src/snapshots/alma__parser__tests__test_module_parser__no definition, followed by a type var.snap
---
source: src/parser.rs
assertion_line: 3300
expression: "parse(\"\nmodule Test\n\ntype Banana a b\n\")"
---
Input:


module Test

type Banana a b


Result:

module Test
    exports:

    imports:
        Alma 1:7
            Float 1:7 1:7
            String 1:7 1:7
            Bool 1:7 (True 1:7, False 1:7) 1:7
    type_definitions:
        Banana 19:25 (a 26:27, b 28:29)
    definitions:




