src/snapshots/alma__parser__tests__test_module_parser__no definition.snap
---
source: src/parser.rs
assertion_line: 2522
expression: "parse(\"\nmodule Test\n\ntype Banana\n\")"

---
Input:


module Test

type Banana


Result:

5:0: Expected type variable names like `a` or a `=` sign between the name and the type definition, but instead found: `[End of file]`

  3│  module Test
  4│  
  5│  type Banana
   │             ↑

Error {
    message: "5:0: Expected type variable names like `a` or a `=` sign between the name and the type definition, but instead found: `[End of file]`\n\n  3│  module Test\n  4│  \n  5│  type Banana\n   │             ↑",
    token: Token {
        kind: Eof,
        position: 26,
        end_position: 26,
        lexeme: "[End of file]",
        line: 5,
        column: 0,
        indent: 0,
    },
}
