src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_or_pattern-11.snap
---
source: src/parser.rs
assertion_line: 4118
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    5 | smth -> True\n\")"
---
Input:

module Test

test = when test is
    5 | smth -> True


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier test 13:17 13:17
            expr:
                PatternMatching 20:53
                    conditions:
                        Identifier test 25:29 25:29
                    PatternMatchingBranch 37:53
                        patterns:
                            Or 37:45
                                Float 5 37:38
                                Identifier smth 41:45 41:45
                        body:
                            Identifier True 49:53 49:53



